# ak2

cfrac/: README  cfrac.sage  common_functions.sage  dixon.sage
keccak/: CMakeLists.txt  Cubes415.txt  README.txt  a_4round_cube_with_15vars.txt  a_4round_cube_with_15vars_different_method.txt  checkequations.cpp  checkequations_extended.cpp  cube.cpp  cube.h  cube_extended.cpp  cubes.txt  cubes1.txt  cubes4.txt  cubes42.txt  cubes4_manually.txt  cubes5.txt  cubes51.txt  cubes5_manually.txt  find_cubes.cpp  find_cubes_extended.cpp  keccak.cpp  keccak.h  keccak_4round_cube_coefficients.txt  keybit44_cube_test.txt  main.cpp  one_round_cube.cpp  recoverKey.cpp  recoverKey_extended.cpp  testing.cpp
lc/: README.txt  a.out  des.c  des.cpp
pollardP/: PollardP.sws  README
squareattack_4rounds/: CMakeLists.txt  README.txt  main.cpp
squareattack_5rounds/: CMakeLists.txt  README.txt  main.cpp
wieners_attack/: README  continued_fractions.sage
